--- a/resources/css/cover.css
+++ b/resources/css/cover.css
@@ -118,3 +118,28 @@ body {
 .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
     opacity: 0;
 }
+
+.card {
+    color: #255f88;
+    border: none;
+    float: left;
+    margin: 5px;
+    height: 100%;
+    min-width: 18rem;
+    min-height: 19.375em;
+}
+
+audio{
+    width:100%;
+    outline: none;
+}
+
+.mg-5-pr{
+    margin-top: 5%;
+}
+.mg-10-pr{
+    margin-top: 10%;
+}
+.mg-15-pr{
+    margin-top: 15%;
+}
